--- a/frontend/src/pages/Project/Project.css
+++ b/frontend/src/pages/Project/Project.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
-    width: 80%;
-    margin: 20px auto; 
+    width: 100%;
+    margin-top: 20px; 
 }
 
 .card-box{
